    has been included in a grammar, but no expression was
    attached to it using '<<=' or '<<'

    "warn_on_assignment_to_Forward" - warns that a Forward has
    been created, but was probably later overwritten by
    erroneously using '=' instead of '<<=' (this is a common
    mistake when using Forwards)
    (**currently not working on PyPy**)

- Fixed bug in ParseResults repr() which showed all matching
  entries for a results name, even if listAllMatches was set
  to False when creating the ParseResults originally. Reported
  by Nicholas42 on GitHub, good catch! (Issue #205)

- Modified refactored modules to use relative imports, as
  pointed out by setuptools project member jaraco, thank you!

- Off-by-one bug found in the roman_numerals.py example, a bug
  that has been there for about 14 years! PR submitted by
  Jay Pedersen, nice catch!

- A simplified Lua parser has been added to the examples
  (lua_parser.py).


Version 3.0.0a1 - April, 2020
-----------------------------
- Removed Py2.x support and other deprecated features. Pyparsing
  now requires Python 3.5 or later. If you are using an earlier
  version of Python, you must use a Pyparsing 2.4.x version

  Deprecated features removed:
  . ParseResults.asXML() - if used for debugging, switch
    to using ParseResults.dump(); if used for data transfer,
    use ParseResults.asDict() to convert to a nested Python
    dict, which can then be converted to XML or JSON or
    other transfer format

  . operatorPrecedence synonym for infixNotation -
    convert to calling infixNotation

  . commaSeparatedList - convert to using
    pyparsing_common.comma_separated_list

  . upcaseTokens and downcaseTokens - convert to using
    pyparsing_common.upcaseTokens and downcaseTokens

  . __compat__.collect_all_And_tokens will not be settable to
    False to revert to pre-2.3.1 results name behavior -
    review use of names for MatchFirst and Or expressions
    containing And expressions, as they will return the